ALIGN IS WORKING